--- a/contact-us.html
+++ b/contact-us.html
@@ -77,14 +77,14 @@
         <section id="contact">
           <div class=" contact-page-form">
             <form name="htmlform" id="contactForm" method="post" action="">
-              <input type="text" name="fullname" id="fullname" placeholder="NAME">
-              <input  type="email" name="email" id="email" placeholder="MAIL">
-              <input  type="text" name="phone" id="phone" placeholder="Phone number">
-              <input list="browsers" name="course" id="course" placeholder="Courses"/>
+              <input class="contactInputs" type="text" name="fullname" id="fullname" placeholder="NAME">
+              <input class="contactInputs" type="email" name="email" id="email" placeholder="MAIL">
+              <input class="contactInputs" type="text" name="phone" id="phone" placeholder="Phone number">
+              <input class="contactInputs"  list="browsers" name="course" id="course" placeholder="Courses"/>
               <datalist id="browsers">
-                   
+
               </datalist>
-              <textarea name="comments" id="comments" placeholder="MESSAGE" required ></textarea>
+              <textarea class="contactInputs"  name="comments" id="comments" placeholder="MESSAGE" required ></textarea>
               <button name="send"   type="button" class="submit" id="contactButton">SEND</button>
             </form>
           </div>
@@ -119,18 +119,31 @@
           </ul>
         </div>
 
-<!--     social-icons     -->
-     <div class=" social-icons">
-    <a href="#" class="fa fa-facebook fa-facebook-blog social "></a> <a href="#" class="fa fa-twitter fa-twitter-blog social"></a> <a href="#" class="fa fa-google fa-google-blog social"></a> <a href="#" class="fa fa-linkedin fa-linkedin-blog social"></a>
-  </div>
-
-  <!-- End-social-icons     -->
-
-
+        <!--social-icons     -->
+      <div class=" social-icons">
+          <a href="#" class="fa fa-facebook fa-facebook-blog social "></a> <a href="#" class="fa fa-twitter fa-twitter-blog social"></a> <a href="#" class="fa fa-google fa-google-blog social"></a> <a href="#" class="fa fa-linkedin fa-linkedin-blog social"></a>
+      </div>
+      <!-- End-social-icons     -->
       </div>
     </div>
   </div>
 </div>
+<!-- Modal Structure -->
+<div id="statusModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">MESSAGE</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 <!--Map-->
 <div class="clearfix"></div>
 <div class="col-lg-12 col-md-12 google-map">
@@ -163,14 +176,14 @@
 <script src="assets/js/components/hs.carousel.js"></script>
 <script src="assets/js/components/hs.counter.js"></script>
 <script src="assets/js/components/hs.cubeportfolio.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/additional-methods.min.js"></script>
 <!-- JS Customization -->
 <script src="assets/js/layout.js"></script>
 <script src="assets/js/validations.js"></script>
 <!-- API requests -->
 <script src="assets/js/api.js"></script>
 <!-- JS Plugins -->
-<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/additional-methods.min.js"></script>
 <script>
       ;(function ($) {
         'use strict';
@@ -220,7 +233,7 @@ $(document).ready(function(){
 		$('html, body').animate({scrollTop : 0},800);
 		return false;
 	});
-        
+
         //get the course list
         ContactCoursesList()
         $("#contactButton").click(function(){
