--- a/course-details.html
+++ b/course-details.html
@@ -119,7 +119,7 @@
   </div>
 </section>
 <!-- Modal -->
-<div class="modal fade" id="enquirypopup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="enquirypopup" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -129,27 +129,28 @@
         </button>
       </div>
       <div class="modal-body">
-        <form>
+        <h4 id="statusMsg"></h4>
+        <form name="htmlform" id="enquiryForm ">
           <div class="form-group">
-            <input type="text" class="form-control" name="fullname" placeholder="Fullname">
+            <input type="text" class="form-control enquiryInputs" name="fullname" id="fullname" placeholder="Fullname">
           </div>
           <div class="form-group">
-            <input type="email" class="form-control" name="email" placeholder="Email ID">
+            <input type="email" class="form-control enquiryInputs" name="email" id="email" placeholder="Email ID">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="phone" placeholder="Phone Number">
+            <input type="text" class="form-control enquiryInputs" name="phone" id="phone" placeholder="Phone Number">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="subject" placeholder="Subject">
+            <input type="text" class="form-control enquiryInputs" name="subject" id="subject" placeholder="Subject">
           </div>
           <div class="form-group">
-            <textarea class="form-control" name="message" placeholder="Message"></textarea>
+            <textarea class="form-control enquiryInputs" name="message" id="message" placeholder="Message"></textarea>
           </div>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Submit</button>
+        <button name="send" type="button" class="btn btn-primary" id="enquiryButton">Submit</button>
       </div>
     </div>
   </div>
@@ -158,6 +159,22 @@
 <!-- Footer -->
 <div id="footer"></div>
 </main>
+<!-- Modal Structure -->
+<div id="statusModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">MESSAGE</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 <!-- JS Global Compulsory -->
 <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/tether.min.js"></script>
@@ -180,11 +197,14 @@
 <script src="assets/js/components/hs.carousel.js"></script>
 <script src="assets/js/components/hs.counter.js"></script>
 <script src="assets/js/components/hs.cubeportfolio.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/additional-methods.min.js"></script>
 <!-- JS Customization -->
 <script src="assets/js/layout.js"></script>
 <!-- API requests -->
 <script src="assets/js/api.js"></script>
 <script src="assets/js/jquery.cookie.js"></script>
+<script src="assets/js/validations.js"></script>
 <!-- JS Plugins Init. -->
 <script>
       (function ($) {
@@ -220,7 +240,6 @@
 
 <script>
 $(document).ready(function(){
-
 	//Check to see if the window is top if not then display button
 	$(window).scroll(function(){
 		if ($(this).scrollTop() > 100) {
@@ -366,6 +385,19 @@ function checkData(course)
   return status;
 }
 
+$('body').on('click', '#enquiryFormAction', function () {
+  var tr = scheduleId = courseId = "";
+  tr = $(this).closest('tr');
+  scheduleId = tr.find('.course-dated').data("dated");
+  courseId  = $("p.course-name").data("courseid");
+  //alert(courseId);
+  if(scheduleId){
+    $('#enquirypopup').modal('show');
+    $("#enquiryButton").click(function(){
+        sendEquiryFormData(scheduleId, courseId)
+    });
+  }
+});
 });
 </script>
 </body>
