contact form & engquiry form related validations and js conditions

--- a/category-courses.html
+++ b/category-courses.html
@@ -73,7 +73,7 @@
         </div>
         <div class="col-lg-12 inner-coruse-list">
           <!-- News Block -->
-          <section class="g-bg-gray-light-v5 Petrochemical-coruse-list">
+          <section class="g-bg-gray-light-v5 Petrochemical-coruse-list" id="courses-layout-top">
             <div class="row" id="courses-layout">
               <!-- Article -->
 
