--- a/cart.html
+++ b/cart.html
@@ -193,7 +193,7 @@ $(document).ready(function(){
             $('#bookedCourses').append(cartItems);
             $('#totalBilling').append(billing);
         }else{
-
+                window.location.href = 'index.html';
         }
     }
     /**
