--- a/commercial-courses.html
+++ b/commercial-courses.html
@@ -35,20 +35,20 @@
 <div id="header"></div>
 <div id="content-area">
 <!-- Promo Block -->
-<section class="dzsparallaxer auto-init height-is-based-on-content use-loading mode-scroll loaded dzsprx-readyall " data-options='{direction: "fromtop", animation_duration: 25, direction: "reverse"}'>
+<section class="dzsparallaxer auto-init height-is-based-on-content use-loading mode-scroll loaded dzsprx-readyall " data-options='{direction: "fromtop", animation_duration: 25, direction: "reverse"}' style="max-height:250px;">
   <!-- Parallax Image -->
   <div class="divimage dzsparallaxer--target w-100 u-bg-overlay g-bg-black-opacity-0_3--after" style="height: 140%; background-image: url(assets/img/Courses.jpg);"></div>
   <!-- End Parallax Image -->
   <!-- Promo Block Content -->
-  <div class="container g-color-white text-left g-py-120">
+  <div class="container g-color-white text-left g-py-30">
     <div class="col-lg-12 col-md-12">
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-sm-12 col-lg-8 col-md-7">
           <h3 class="h1 g-font-weight-600 text-uppercase mb-2">Commercial Courses</h3>
-          <p class="g-font-weight-300 g-font-size-22 text-uppercase">NMCI Services is the commercial division of the National Maritime College.We are the Maritime Training Specialists in STCW, STCW Refresher, OPITO, Simulation, Port and Bespoke Courses.</p>
+          <p class="g-font-weight-300 g-font-size-17 text-uppercase">NMCI Services is the commercial division of the National Maritime College.We are the Maritime Training Specialists in STCW, STCW Refresher, OPITO, Simulation, Port and Bespoke Courses.</p>
           <p>Click on the individual course categories below for upcoming dates or <a href="contentfiles/Commercial Calendar 2017/NMCI Timetables 2017_ALL PAGES_HP (Upload Version).pdf">why not view/ download our 2017 Calendar.&nbsp; </a></p>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-4 col-md-5">
           <div class="wrap">
             <!--<div class="search">
               <input type="text" class="searchTerm" placeholder="What are you looking for?">
