--- a/course-details.html
+++ b/course-details.html
@@ -40,12 +40,12 @@
   <div class="divimage dzsparallaxer--target w-100 u-bg-overlay g-bg-black-opacity-0_3--after" style="height: 140%; background-image: url(http://navcomelectronics.eu/NMCIS/assets/img/coursedetiasinformation.jpg);"></div>
   <!-- End Parallax Image -->
   <!-- Promo Block Content -->
-  <div class="container g-color-white text-left g-py-120">
+  <div class="container g-color-white text-left g-py-30">
     <div class="col-lg-12 col-md-12">
       <div class="row">
         <div class="col-lg-6 col-md-6">
           <h3 class="h1 g-font-weight-600 text-uppercase mb-2">An Introduction to LNG</h3>
-          <p class="g-font-weight-300 g-font-size-22 text-uppercase">GAC Training & Service Solutions has developed this bespoke two day Liquefied Natural Gas Training course to give a structured introduction to LNG.</p>
+          <p class="g-font-weight-300 g-font-size-16 text-uppercase">GAC Training & Service Solutions has developed this bespoke two day Liquefied Natural Gas Training course to give a structured introduction to LNG.</p>
           <!--          <p>Click on the individual course categories below for upcoming dates or <a href="contentfiles/Commercial Calendar 2017/NMCI Timetables 2017_ALL PAGES_HP (Upload Version).pdf">why not view/ download our 2017 Calendar.&nbsp; </a></p>-->
         </div>
         <div class="col-lg-6 col-md-6">
@@ -269,6 +269,7 @@ $(document).ready(function(){
         csname = $("p.course-name").data("csname");
         cid = $("p.course-name").data("courseid");
         cdesc = $(".cdesc").data("cdesc");
+        catname = $(".course-mainHeading").data("catname");
         //alert('scheduleId: '+scheduleId+', cprice: ' + cprice+', cdesc: ' + cdesc+', csname: ' + csname+', cid: ' + cid);
 
         course = {
@@ -277,7 +278,8 @@ $(document).ready(function(){
             "cprice": cprice,
             "cdesc": cdesc,
             "cid": cid,
-            "csname": csname
+            "csname": csname,
+            "catname": catname
         };
 
         insertCookieData(course);
@@ -399,11 +401,11 @@ $('body').on('click', '#enquiryFormAction', function () {
            if (status === true){
                 sendEquiryFormData(scheduleId, courseId);
            }
-       
+
     });
   }
 });
- 
+
 });
 </script>
 </body>
