--- a/course-details.html
+++ b/course-details.html
@@ -96,7 +96,7 @@
           <div class="col-lg-12 course-full-description">
 
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12" id="scheduleTable">
             <h3>Course availability and booking</h3>
             <table>
               <thead>
