contact form category dependent course dropdown and map pin point is changed, footer changes and sample pdf download

--- a/cart.html
+++ b/cart.html
@@ -223,7 +223,7 @@ $(document).ready(function(){
             $('#totalBilling').append(billing);
 
         }else{
-                window.location.href = 'index.html';
+                //window.location.href = 'index.html';
         }
     }
 
@@ -263,7 +263,7 @@ $(document).ready(function(){
               var modifiedData = JSON.stringify(addCoureses);
               $.cookie("cart", modifiedData);
               //ny = getCookieData();
-              //console.log(ny); //to check modified cookie 
+              //console.log(ny); //to check modified cookie
           }
       });
     }
