--- a/course-details.html
+++ b/course-details.html
@@ -88,8 +88,8 @@
           <div class=" col-lg-6 " >
             <div class="LNG-pdf-downlod">
               <h3>Download PDF</h3>
-              <div class="download-PDF"><a href="#"><img src="assets/images/pdf-download.png"><span>Download Course As PDF</span></a></div>
-              <div class="download-brochure"><a href="#"><img src="assets/images/pdf-download.png"><span>Download Course Brochure</span></a></div>
+              <div class="download-PDF"><a href="assets/pdf-files/pdf-sample.pdf" target="_blank"><img src="assets/images/pdf-download.png"><span>Download Course As PDF</span></a></div>
+              <div class="download-brochure"><a href="assets/pdf-files/pdf-sample.pdf" target="_blank"><img src="assets/images/pdf-download.png"><span>Download Course Brochure</span></a></div>
             </div>
           </div>
           <div class="clearfix"></div>
