--- a/contact-us.html
+++ b/contact-us.html
@@ -84,7 +84,7 @@
                 <option value="" class="disabled">Course Category</option>
               </select>
               <select class="contactInputs" id="coursesListDropdown" name="course" id="course">
-                <option value="" class="disabled">Courses</option>
+
               </select>
               <textarea class="contactInputs"  name="comments" id="comments" placeholder="MESSAGE" required ></textarea>
               <button name="send"   type="button" class="submit" id="contactButton">SEND</button>
@@ -150,7 +150,7 @@
 <div class="clearfix"></div>
 <div class="col-lg-12 col-md-12 google-map">
   <div class="map-responsive">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2648.833038448318!2d-89.2826271!3d48.402149400000006!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4d59202c99c9252f%3A0x4cb61e2f5a8d87e!2s218+Humber+Crescent%2C+Thunder+Bay%2C+ON+P7C+5X2!5e0!3m2!1sen!2sca!4v1424370904204" width=100% height="350" frameborder="0" style="border:0"></iframe>
+    <iframe src="https://maps.google.com/maps?q=National Maritime College of Ireland&t=&z=13&ie=UTF8&iwloc=&output=embed" width=100% height="350" frameborder="0" style="border:0"></iframe>
   </div>
 </div>
 <!--End-Map-->
@@ -237,7 +237,7 @@ $(document).ready(function(){
 	});
 
   //get the course list
-  ContactCoursesList()
+  ContactCoursesList();
   $("#contactButton").click(function(){
      var status=  $("#contactForm").valid();
      console.log(status);
@@ -247,15 +247,15 @@ $(document).ready(function(){
 
   });
 
-  /** contact form select options functionality **/
   $('#coursesListDropdown').hide();
+  /** contact form select options functionality **/
 
-  $('#categoryListDropdown').change(function() {
+  $('body').on('change', '#categoryListDropdown', function () {
      //alert('Value changed to ' + $(this).val());
       var selectcatid = $(this).val();
 
       if (selectcatid) {
-          //alert('category-courses.html?catId=' + selectcatid);
+        dropdownCategortyCourses(selectcatid);
       }
 
       if($('#categoryListDropdown').val() !== '') {
